<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@color/col_pa02"
	>
	<LinearLayout 
	    android:layout_width="fill_parent"
		android:layout_height="490dip" 
		android:layout_marginTop="5dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:padding="10dip"
		android:orientation="vertical"
	    android:background="@drawable/bg_foods_list"
	    >
        <TextView
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dip"
        	android:layout_gravity="center_horizontal"
        	android:gravity="center_horizontal"
        	android:textSize="20sp"
        	android:textColor="@color/gray"
        	android:textStyle="bold"
        	android:text="@string/app_name"
            />
        <TextView
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dip"
        	android:textSize="14sp"
        	android:textColor="@color/gray"
        	android:text="@string/about_content1"
            />
         <TextView
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="8dip"
        	android:textSize="14sp"
        	android:textColor="@color/col_pa06"
        	android:text="@string/about_content2"
            />
         <TextView android:id="@+id/tv_contact"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="8dip"
        	android:textSize="14sp"
        	android:textColor="@color/gray"
        	android:text="@string/about_content3"
        	android:autoLink="email|web"
            />
         <Button android:id="@+id/btn_check_version"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
             android:textSize="17sp"
        	android:textColor="@color/gray"
        	android:textStyle="bold"
             android:text="@string/check_version"
             />
	</LinearLayout>
		
</LinearLayout>
