<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button android:id="@+id/btn_1"
    	android:layout_width="fill_parent"
    	android:layout_height="50dip"
    	android:layout_weight="1"
    	android:layout_marginTop="10dip"
    	android:layout_marginLeft="3dip"
    	android:text="@string/select_option_open"
    	android:textColor="@color/col_pa03"
    	android:background="@drawable/selector_bg_button"
    />
    <Button android:id="@+id/btn_2"
    	android:layout_width="fill_parent"
    	android:layout_height="50dip"
    	android:layout_weight="1"
    	android:layout_marginTop="10dip"
    	android:layout_marginLeft="3dip"
    	android:text="@string/select_option_manage"
    	android:textColor="@color/col_pa03"
    	android:background="@drawable/selector_bg_button"
    />
    <Button android:id="@+id/btn_3"
    	android:layout_width="fill_parent"
    	android:layout_height="50dip"
    	android:layout_weight="1"
    	android:layout_marginTop="10dip"
    	android:layout_marginBottom="10dip"
    	android:layout_marginLeft="3dip"
    	android:text="@string/select_option_uninstall"
    	android:textColor="@color/col_pa03"
    	android:background="@drawable/selector_bg_button"
    />
    </LinearLayout>
    <Button android:id="@+id/btn_share_apk"
    	android:layout_width="fill_parent"
    	android:layout_height="50dip"
    	android:layout_marginLeft="3dip"
    	android:layout_marginBottom="10dip"
    	android:text="@string/select_share_apk"
    	android:textColor="@color/col_pa03"
    	android:background="@drawable/selector_bg_button"
    />
    <Button android:id="@+id/btn_share_link"
    	android:layout_width="fill_parent"
    	android:layout_height="50dip"
    	android:layout_marginTop="10dip"
    	android:layout_marginBottom="10dip"
    	android:layout_marginLeft="3dip"
    	android:text="@string/select_share_link"
    	android:textColor="@color/col_pa03"
    	android:background="@drawable/selector_bg_button"
    	android:visibility="gone"
    />
</LinearLayout>
